# libsiftfast

./: CMakeLists.txt  INSTALL  README.md  bloom.conf  debian.store  package.xml  patches.conf  profiler.cpp
cmake/: UseSSE.cmake  libsiftfast-extras.cmake.in
debian/: changelog  control  gbp.conf  rules
src/: libsiftfast.cpp
