<?xml version="1.0"?>
<package>
  <name>libsiftfast</name>
  <version>1.3.0</version>
  <description>The libsiftfast package</description>

  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>

  <author email="zerofrog@gmail.com">zerofrog</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
